--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         </div>
         <div class="grid">
             <div class="category-title">常用工具</div>
-            <a href="/tools/text2pic" class="card"><strong>Text2Pic</strong><br><small>文本转图片</small></a>
-            <a href="/tools/colorpicker" class="card"><strong>Color Picker</strong><br><small>颜色选择器</small></a>
+            <a href="/tools/text2pic.html" class="card"><strong>Text2Pic</strong><br><small>文本转图片</small></a>
+            <a href="/tools/colorpicker.html" class="card"><strong>Color Picker</strong><br><small>颜色选择器</small></a>
         </div>
     </div>
     <footer class="footer">
