--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <div class="category-title">常用工具</div>
             <a href="/tools/text2pic.html" class="card"><strong>Text2Pic</strong><br><small>文本转图片</small></a>
             <a href="/tools/colorpicker.html" class="card"><strong>Color Picker</strong><br><small>颜色选择器</small></a>
+            <a href="/tools/jsonparse.html" class="card"><strong>JSON Parse</strong><br><small>JSON格式化工具</small></a>
         </div>
     </div>
     <footer class="footer">
